style.css
/* ... */
.button-i:hover {
    transform: translateY(-12px);
    transform-origin: center;
    box-shadow: 0 8px 20px #000000;
    /* z-index: 1; */
}

/* I give  diff set of card(not cards) to evry page , only diff for now is their hover shadow glow */

.cards {
    display: flex;
    justify-content: center;
    gap: 35px;
    flex-wrap: wrap;
    padding-top: 30px;
    flex-direction: column;
    align-items: center;
}

/* Home page Card */

.card {
    width: 75vw;
    padding: 30px;
    border-radius: 20px;
    background: rgba(255, 255, 255,0);
    border: 1px solid rgba(255, 255, 255, 0.15);
    transition: 0.3s;
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.7);
    margin-right: 30px;
}

.card:hover {
    transform: translateY(-12px);
    box-shadow: 0 15px 35px rgba(251, 191, 36, 0.4);
}

.card h2 {
    width: 25vw;
    color: #b59736;
    margin-bottom: 15px;
}

a {
    text-decoration: none;
}

/* Gallery Page Card */

.card-g {
    width: 320px;
    padding: 30px;
    border-radius: 20px;
    background: rgba(255, 255, 255, 0.08);
    border: 1px solid rgba(255, 255, 255, 0.15);
    transition: 0.3s;
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.7);
}

.card-g:hover {
    transform: translateY(-12px);
    box-shadow: 0 15px 35px rgba(11, 232, 236, 0.4);
}

/* Ancient India Page Card */

.card-a {
    width: 320px;
    padding: 30px;
    border-radius: 20px;
    background: rgba(255, 255, 255, 0.08);
    border: 1px solid rgba(255, 255, 255, 0.15);
    transition: 0.3s;
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.7);
}

.card-a:hover {
    transform: translateY(-12px);
    box-shadow: 0 15px 35px rgba(236, 123, 11, 0.4);
}


/* Freedom Fighters Page Card */

.card-f {
    width: 320px;
    padding: 30px;
    border-radius: 20px;
    background: rgba(255, 255, 255, 0.08);
    border: 1px solid rgba(255, 255, 255, 0.15);
    transition: 0.3s;
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.7);
}

.card-f:hover {
    transform: translateY(-12px);
    box-shadow: 0 15px 35px rgba(232, 11, 236, 0.4);
}


/* /Space Museum Card */

.card-s {
    width: 320px;
    padding: 30px;
    border-radius: 20px;
    background: rgba(255, 255, 255, 0.08);
    border: 1px solid rgba(255, 255, 255, 0.15);
    transition: 0.3s;
    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.7);
}

.card-s:hover {
    transform: translateY(-12px);
    box-shadow: 0 15px 35px rgba(28, 179, 23, 0.4);
}

/* Content lines */

.content2 p {
    color: #ddd;
    line-height: 1.5;
    width: 250px;
}

.timeline-band {
    height: 50vh;
    width: 50vw;
    position: relative;
    display: inline-grid;
    grid-template-columns: minmax(260px, 0.7fr) minmax(0, 1fr);
    gap: 24px;
    margin: 18px 195px 56px;
    color: #000000;
    padding: 28px;
    border: 5px solid rgb(101, 91, 1);
    background: url(z-pic2.png);
    background-size: 100%;
    /* box-shadow: 0 8px 25px rgba(0,0,0,0),0 0 10px rgba(255,196,0,1); */
    z-index: 9;
}

.timeline strong,
.timeline p {
    border-left: 4px solid rgb(125, 112, 23);
    padding: 10px 0 10px 14px;
}

.timeline strong{
    padding-top: 0;
}

.timeline-band h2 {
    /* max-width: 50px; */
    margin: 0;
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: Georgia, "Times New Roman", serif;
    font-size: 30px;
    line-height: 0.96;
    font-weight: 800;
    /* padding-top: 100px; */

}

.timeline-upper{
    margin-top: 100px;
}

.timeline-below{
    /* border: 2px solid black; */
    
    border-top: 2px solid rgb(107, 95, 29);
    border-radius: 10px;
    padding-left: 5px;
    margin-top: 10px;
}

.timeline{
    box-shadow: 20px 8px 20px rgba(212, 188, 49, 0.6);
}

.timeline .band-hover{
    transition: 0.3s;
    box-shadow: 4px 2px 1px #020617;
    /* box-shadow: 20px 8px 20px rgba(212, 188, 49, 0.6); */
}

.timeline .band-hover:hover{
    transform: scale(1.05);
    box-shadow: 0 8px 15px black;
}

/* Artifact */
.png{
    background-image: url(z-pic4.png);
    height: 600px;
    width: 512px;
    background-size: cover;
    display: inline-flex;
    margin: -600px 900px 0;
    z-index: 6;
    transform: scaleX(1.1);
}

/* World Map */
.worldmap{
    background-image: url(z-pic5.png);
    background-size: cover;
    margin-left: 500px;
    height: 400px;
    width: 550px;
}

/* AI Pic In Index */
.botpic{
    height: 200px;
    width: 200px;
    background-image:url(aibot4.png) ;
    background-size: cover;
    position: fixed;
    bottom: 1px;
    right: 10px;
    clip-path: inset(2px);
    transition: 0.3s;

}
.botpic:hover{
    transform: scale(1.09);
}

/* Footer(On Home and Space Museum Page) */

footer {
    text-align: center;
    padding: 25px;
    background: #020617;
    color: #fbbf24;
    font-weight: bold;
    letter-spacing: 2px;
    margin-top: 50px;
}

/* colors of title pages in cards */

.Freedom {
    color: #650f5e;
}

.Gallery {
    color: #420739;
}

.ancient {
    color: #563506;
}

.Space {
    color: #0d470b;
}

.contact {
    color: #f4f7f9;
}

/* Submit Button in Contact */

.submit button {
    margin: 100px;
    height: 50px;
    width: 100px;
    font-size: 20px;
    transition: 0.4s;
    box-shadow: 0 15px 30px 20px rgb(240, 230, 230);
}

.submit button:hover {
    transform: translateY(-12px);
    box-shadow: 0 15px 30px 20px rgb(39, 206, 228);
}

/* AI */
.chat-section {
    width: 500px;
    margin: 50px auto;
    background: #071a35;
    border-radius: 20px;
    padding: 25px;
    color: white;
    box-shadow: 0 10px 30px rgba(0, 0, 0, .4);
}

.chat-section h2 {
    text-align: center;
    color: gold;
    margin-bottom: 20px;
}

.chat-box {
    height: 350px;
    overflow-y: auto;
    background: #081523;
    border-radius: 15px;
    padding: 15px;
}

.bot,
.user {
    max-width: 75%;
    padding: 12px;
    margin: 12px 0;
    border-radius: 15px;
    animation: fade .3s;
}

.bot {
    background: #234d7d;
}

.user {
    background: gold;
    color: black;
    margin-left: auto;
}
/* ... */

